versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/MultiplicitySums.f03


!! THIS FILE WAS AUTOGENERATED!
!! DO NOT MODIFY!

module generalMultiplicitySums
use iso_c_binding
interface


!! -----------------------------------------------------------------------------
!! Basics
!! Create, Assign, Delete
!! -----------------------------------------------------------------------------

!! Create, default, const
function MultiplicitySumsDefaultConst() &
      bind(C, name='MultiplicitySumsDefaultConst') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function MultiplicitySumsDefaultConst

!! Create, default
function MultiplicitySumsDefault() &
      bind(C, name='MultiplicitySumsDefault') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function MultiplicitySumsDefault

!! Create, general, const
function MultiplicitySumsCreateConst( &
   multiplicitySum, multiplicitySumSize &
) &
      bind(C, name='MultiplicitySumsCreateConst') &
      result(handle)
   use iso_c_binding
   implicit none
   integer(c_size_t), value :: multiplicitySumSize
   type(c_ptr) :: multiplicitySum(multiplicitySumSize)
   type(c_ptr) :: handle
end function MultiplicitySumsCreateConst

!! Create, general
function MultiplicitySumsCreate( &
   multiplicitySum, multiplicitySumSize &
) &
      bind(C, name='MultiplicitySumsCreate') &
      result(handle)
   use iso_c_binding
   implicit none
   integer(c_size_t), value :: multiplicitySumSize
   type(c_ptr) :: multiplicitySum(multiplicitySumSize)
   type(c_ptr) :: handle
end function MultiplicitySumsCreate

!! Assign
subroutine MultiplicitySumsAssign(handleLHS, handleRHS) &
      bind(C, name='MultiplicitySumsAssign')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handleLHS, handleRHS
end subroutine MultiplicitySumsAssign

!! Delete
subroutine MultiplicitySumsDelete(handle) &
      bind(C, name='MultiplicitySumsDelete')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine MultiplicitySumsDelete


!! -----------------------------------------------------------------------------
!! I/O
!! Read, Write, Print
!! Each returns 0 if failure, 1 if success.
!! -----------------------------------------------------------------------------

!! Read from file
function MultiplicitySumsRead(handle, filename, filenameSize) &
      bind(C, name='MultiplicitySumsRead') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function MultiplicitySumsRead

!! Write to file
function MultiplicitySumsWrite(handle, filename, filenameSize) &
      bind(C, name='MultiplicitySumsWrite') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function MultiplicitySumsWrite

!! Print to standard output, in our prettyprinting format
function MultiplicitySumsPrint(handle) &
      bind(C, name='MultiplicitySumsPrint') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function MultiplicitySumsPrint

!! Print to standard output, as XML
function MultiplicitySumsPrintXML(handle) &
      bind(C, name='MultiplicitySumsPrintXML') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function MultiplicitySumsPrintXML

!! Print to standard output, as JSON
function MultiplicitySumsPrintJSON(handle) &
      bind(C, name='MultiplicitySumsPrintJSON') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function MultiplicitySumsPrintJSON


!! -----------------------------------------------------------------------------
!! Child: multiplicitySum
!! -----------------------------------------------------------------------------

!! Has
function MultiplicitySumsMultiplicitySumHas(handle) &
      bind(C, name='MultiplicitySumsMultiplicitySumHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function MultiplicitySumsMultiplicitySumHas

!! Clear
subroutine MultiplicitySumsMultiplicitySumClear(handle) &
      bind(C, name='MultiplicitySumsMultiplicitySumClear')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine MultiplicitySumsMultiplicitySumClear

!! Size
function MultiplicitySumsMultiplicitySumSize(handle) &
      bind(C, name='MultiplicitySumsMultiplicitySumSize') &
      result(vectorSize)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t) :: vectorSize
end function MultiplicitySumsMultiplicitySumSize

!! Add
subroutine MultiplicitySumsMultiplicitySumAdd(handle, fieldHandle) &
      bind(C, name='MultiplicitySumsMultiplicitySumAdd')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine MultiplicitySumsMultiplicitySumAdd

!! Get, by index \in [0,size), const
function MultiplicitySumsMultiplicitySumGetConst(handle, index) &
      bind(C, name='MultiplicitySumsMultiplicitySumGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: index
   type(c_ptr) :: resultHandle
end function MultiplicitySumsMultiplicitySumGetConst

!! Get, by index \in [0,size)
function MultiplicitySumsMultiplicitySumGet(handle, index) &
      bind(C, name='MultiplicitySumsMultiplicitySumGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: index
   type(c_ptr) :: resultHandle
end function MultiplicitySumsMultiplicitySumGet

!! Set, by index \in [0,size)
subroutine MultiplicitySumsMultiplicitySumSet(handle, index, fieldHandle) &
      bind(C, name='MultiplicitySumsMultiplicitySumSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: index
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine MultiplicitySumsMultiplicitySumSet

!! ------------------------
!! Re: metadatum label
!! ------------------------

!! Has, by label
function MultiplicitySumsMultiplicitySumHasByLabel(handle, meta, metaSize) &
      bind(C, name='MultiplicitySumsMultiplicitySumHasByLabel') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   integer(c_int) :: has
end function MultiplicitySumsMultiplicitySumHasByLabel

!! Get, by label, const
function MultiplicitySumsMultiplicitySumGetByLabelConst(handle, meta, metaSize) &
      bind(C, name='MultiplicitySumsMultiplicitySumGetByLabelConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: resultHandle
end function MultiplicitySumsMultiplicitySumGetByLabelConst

!! Get, by label
function MultiplicitySumsMultiplicitySumGetByLabel(handle, meta, metaSize) &
      bind(C, name='MultiplicitySumsMultiplicitySumGetByLabel') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: resultHandle
end function MultiplicitySumsMultiplicitySumGetByLabel

!! Set, by label
subroutine MultiplicitySumsMultiplicitySumSetByLabel(handle, meta, metaSize, fieldHandle) &
      bind(C, name='MultiplicitySumsMultiplicitySumSetByLabel')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine MultiplicitySumsMultiplicitySumSetByLabel

!! ------------------------
!! Re: metadatum ENDF_MT
!! ------------------------

!! Has, by ENDF_MT
function MultiplicitySumsMultiplicitySumHasByENDFMT(handle, meta) &
      bind(C, name='MultiplicitySumsMultiplicitySumHasByENDFMT') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int), value, intent(in) :: meta
   integer(c_int) :: has
end function MultiplicitySumsMultiplicitySumHasByENDFMT

!! Get, by ENDF_MT, const
function MultiplicitySumsMultiplicitySumGetByENDFMTConst(handle, meta) &
      bind(C, name='MultiplicitySumsMultiplicitySumGetByENDFMTConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int), value, intent(in) :: meta
   type(c_ptr) :: resultHandle
end function MultiplicitySumsMultiplicitySumGetByENDFMTConst

!! Get, by ENDF_MT
function MultiplicitySumsMultiplicitySumGetByENDFMT(handle, meta) &
      bind(C, name='MultiplicitySumsMultiplicitySumGetByENDFMT') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_int), value, intent(in) :: meta
   type(c_ptr) :: resultHandle
end function MultiplicitySumsMultiplicitySumGetByENDFMT

!! Set, by ENDF_MT
subroutine MultiplicitySumsMultiplicitySumSetByENDFMT(handle, meta, fieldHandle) &
      bind(C, name='MultiplicitySumsMultiplicitySumSetByENDFMT')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int), value, intent(in) :: meta
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine MultiplicitySumsMultiplicitySumSetByENDFMT


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module generalMultiplicitySums
